[package]
name = "rcon"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"], optional = true }
humantime = { version = "2.3", optional = true }

[features]
build-binary = ["clap", "humantime"]

[[bin]]
name = "rcon"
path = "src/cli.rs"
required-features = ["build-binary"]